<resources>
    <string name="app_name">WGU Scheduler</string>
    <string name="action_settings">Settings</string>

    <!--    Notification Channel-->
    <string name="default_channel_id">wgu_scheduler_default</string>
    <string name="default_channel_name">WGU Student Channel</string>
    <string name="default_channel_description">Channel for Notifications about Courses and Terms</string>

    <!--    Page Labels-->
    <string name="title_activity_term">Term List</string>
    <string name="title_activity_term_detail">TermDetailActivity</string>
    <string name="title_activity_course">Course List</string>
    <string name="title_activity_course_detail">CourseDetailActivity</string>
    <string name="title_activity_note_detail">NoteDetailActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_mentor_detail">MentorDetailActivity</string>
    <string name="title_activity_assessment">Assessment List</string>

    <!--    Course Status Labels-->
    <string name="course_status_in_progress">In Progress</string>
    <string name="course_status_completed">Completed</string>
    <string name="course_status_dropped">Dropped</string>
    <string name="course_status_planned">Plan to Take</string>

    <!--    Assessment Type Labels-->
    <string name="assessment_type_performance">Performance</string>
    <string name="assessment_type_objective">Objective</string>

    <!--    Main Button Labels-->
    <string name="main_term_button_label">Terms</string>
    <string name="main_course_button_label">Courses</string>
    <string name="main_assessment_button_label">Assessments</string>

    <!--    Date Formats-->
    <string name="date_format_short">MM/dd/yy</string>
    <string name="date_format_medium">MM/dd/yyyy</string>
    <string name="date_format_long">MMM dd, yyyy</string>

    <!--    List Item Summary Formats-->
    <string name="list_item_summary_format_term">Start: %1$s - End:%2$s</string>
    <string name="list_item_summary_format_course">Start: %1$s - Est. End: %2$s [Status: %3$s]</string>
    <string name="list_item_summary_format_assessment">Type: %1$s [Test Date: %2$s]</string>
    <string name="list_item_title_format_mentor">%2$s, %1$s</string>
    <string name="list_item_summary_format_mentor">Email: %1$s | Phone: %2$s</string>


    <!--    Menu Labels-->
    <string name="menu_label_save">Save</string>
    <string name="menu_label_delete">Delete</string>

    <!--    Unassigned Labels-->
    <string name="course_unassigned">No Course Assigned</string>
    <string name="term_unassigned">No Term Assigned</string>

    <!--    Term Editor Labels-->
    <string name="term_editor_title_new">New Term</string>
    <string name="term_editor_title_edit">Edit Term</string>
    <string name="term_editor_title_label">Term Title</string>
    <string name="term_editor_title_hint_label">Enter Term Title</string>
    <string name="term_editor_start_date_label">Start Date</string>
    <string name="term_editor_start_date_hint">Enter Start Date (mm/dd/yyyy)</string>
    <string name="term_editor_end_date_label">End Date</string>
    <string name="term_editor_end_date_hint">Enter End Date (mm/dd/yyyy)</string>
    <string name="term_editor_course_sect_title">Term Course List</string>
    <string name="term_editor_cancel_title">Cancel Changes to Term?</string>
    <string name="term_editor_cancel_message">Are you sure you want to leave and cancel your changes?</string>
    <string name="term_editor_cancel_yes_button">Yes</string>
    <string name="term_editor_cancel_no">No</string>
    <string name="term_editor_delete_title">Delete %1$s ?</string>
    <string name="term_editor_delete_message_no_courses">Are you sure you want to delete %1$s?</string>
    <string name="term_editor_delete_positive_button_no_course">Yes</string>
    <string name="term_editor_delete_negative_button_no_course">Cancel</string>
    <string name="term_editor_delete_message_has_courses">Unable to delete Term as it has courses currently assigned. Please remove all courses before deleting.</string>
    <string name="term_editor_delete_title_has_course">Unable to Delete</string>
    <string name="term_editor_delete_positive_button_has_course">OK</string>
    <string name="term_editor_notification_delete">Term: %1$s - has been deleted</string>
    <string name="term_editor_notification_saved">Term saved</string>


    <!--    Course Editor Labels-->
    <string name="course_editor_title_label">Course Title</string>
    <string name="course_editor_title_hint">Enter Course Title</string>
    <string name="course_editor_start_date_label">Start Date</string>
    <string name="course_editor_start_date_hint">Enter Start Date (mm/dd/yyyy)</string>
    <string name="course_editor_end_date_label">Est. End Date</string>
    <string name="course_editor_end_date_hint">Enter Est. End Date (mm/dd/yyyy)</string>
    <string name="course_editor_status_label">Course Status</string>
    <string name="course_editor_term_label">Course Term</string>
    <string name="course_editor_notes_title">Course Notes</string>
    <string name="course_editor_assessment_title">Course Assessments</string>
    <string name="course_editor_mentor_title">Course Mentors</string>
    <string name="course_editor_mentor_title_image_description">Course Mentor Expand Button</string>
    <string name="course_editor_notes_title_image_description">Course Notes Expansion Button</string>
    <string name="course_editor_assessment_title_image_description">Course Assessment Expansion button</string>
    <string name="course_editor_title_new">New Course</string>
    <string name="course_editor__title_edit">Edit Course</string>
    <string name="course_editor_cancel_title">Cancel Changes to Course</string>
    <string name="course_editor_cancel_message">Are you sure you want to leave and cancel your changes?</string>
    <string name="course_editor_cancel_yes">Yes</string>
    <string name="course_editor_cancel_no">No</string>
    <string name="course_editor_delete_title">Delete %1$s ?</string>
    <string name="course_editor_delete_message_no_associated_objects">Are you sure you want to delete %1$s ?</string>
    <string name="course_editor_delete_message_has_associated_objects">Are you sure you want to delete course %1$s and its associated Notes, Mentors? Note: Assessments will be unassigned.</string>
    <string name="course_editor_delete_yes">Yes</string>
    <string name="course_editor_delete_no">Cancel</string>
    <string name="course_editor_notification_saved">Course has been saved</string>
    <string name="course_editor_notification_delete_associate_objects">Course and all associated records have been deleted or unassigned</string>
    <string name="course_editor_notification_delete_no_associated">Course has been deleted</string>


    <!--    Note Editor-->
    <string name="note_editor_text_input_hint">Enter Note</string>
    <string name="note_editor_title_new">New Note</string>
    <string name="note_editor_title_edit">Edit Note</string>
    <string name="note_editor_sharing_title">Sharing Course Notes</string>
    <string name="note_editor_cancel_title">Cancel Changes to Note</string>
    <string name="note_editor_cancel_message">Are you sure you want to leave and cancel your changes?</string>
    <string name="note_editor_cancel_yes">Yes</string>
    <string name="note_editor_cancel_no">No</string>
    <string name="note_editor_delete_title">Delete this Note</string>
    <string name="note_editor_delete_message">Are you sure you want to permanently delete this Note?</string>
    <string name="note_editor_delete_yes">Yes</string>
    <string name="note_editor_delete_no">No</string>

    <!--    Assessment Editor-->

    <string name="title_activity_assessment_detail">AssessmentDetailActivity</string>
    <string name="assessment_editor_title_hint">Enter Assessment Name</string>
    <string name="assessment_editor_date_hint">Enter Assessment Date (mm/dd/yyyy)</string>
    <string name="assessment_editor_title_new">New Assessment</string>
    <string name="assessment_editor_title_edit">Edit Assessment</string>
    <string name="assessment_editor_cancel_title">Cancel Changes to Assessment</string>
    <string name="assessment_editor_cancel_message">Are you super you want to leave and cancel your changes?</string>
    <string name="assessment_editor_cancel_yes">Yes</string>
    <string name="assessment_editor_cancel_no">No</string>
    <string name="assessment_editor_delete_title">Delete Assessment: %1$s</string>
    <string name="assessment_editor_delete_message">Are you sure you want to permanently delete this assessment?</string>
    <string name="assessment_editor_delete_yes">Yes</string>
    <string name="assessment_editor_delete_no">No</string>
    <string name="assessment_editor_notification_saved">Assessment has been saved</string>
    <string name="assessment_editor_notification_delete">Assessment has been deleted</string>

    <!--    Mentor Editor-->
    <string name="mentor_editor_name_first_label">First Name</string>
    <string name="mentor_editor_name_first_hint">Enter Mentor First Name</string>cb
    <string name="mentor_editor_name_last_label">Last Name</string>
    <string name="mentor_editor_name_last_hint">Enter Mentor Last Name</string>
    <string name="mentor_editor_email_label">E-Mail</string>
    <string name="mentor_editor_email_hint">Enter Mentor E-mail</string>
    <string name="mentor_editor_phone_label">Phone</string>
    <string name="mentor_editor_phone_hint">Enter Mentor Phone Number</string>
    <string name="mentor_editor_course_label">Assigned Course</string>
    <string name="mentor_editor_cancel_title">Cancel Changes to Mentor</string>
    <string name="mentor_editor_cancel_message">You have not saved your changes. Are you sure you want to leave without saving your changes?</string>
    <string name="mentor_editor_cancel_yes">Yes</string>
    <string name="mentor_editor_cancel_no">No</string>
    <string name="mentor_editor_delete_title">Delete Mentor: %1$s</string>
    <string name="mentor_editor_delete_message">Are you sure you want to delete this mentor record?</string>
    <string name="mentor_editor_delete_yes">Yes</string>
    <string name="mentor_editor_delete_no">No</string>
    <string name="mentor_editor_notification_saved">Mentor: %1$s, has been successfully saved</string>
    <string name="mentor_editor_notification_delete">Mentor: %1$s, has been deleted.</string>

    <!--    Notification messages-->
    <string name="notification_course_title_start">Course Start Reminder</string>
    <string name="notification_course_title_end">Course End Reminder</string>
    <string name="notification_course_message_end">Your Course: %1$s will be ending on %2$s</string>
    <string name="notification_course_message_start">Your Course: %1$s will be starting on %2$s</string>
    <string name="notification_assessment_title">Assessment Reminder</string>
    <string name="notification_assessment_message">Your Assessment: %1$s is due on %2$s</string>
    <string name="note_editor_notification_save">Note Saved</string>
    <string name="note_editor_notification_delete">Note Deleted</string>
    <string name="menu_label_remove_all_courses">Unassign All Courses</string>
    <string name="menu_label_delete_all_courses">Delete All Courses</string>


</resources>
