<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TableLayout
        android:id="@+id/term_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/term_title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/term_editor_title_label" />

            <EditText
                android:id="@+id/term_title_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/term_editor_title_hint_label"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/term_start_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/term_editor_start_date_label" />

            <EditText
                android:id="@+id/term_start_date_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/term_editor_start_date_hint"
                android:inputType="date" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/term_start_date_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:backgroundTint="#FFFFFF"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_calendar" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp">

            <TextView
                android:id="@+id/term_end_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:text="@string/term_editor_end_date_label" />

            <EditText
                android:id="@+id/term_end_date_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/term_editor_end_date_hint"
                android:inputType="date" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/term_end_date_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                app:backgroundTint="#FFFFFF"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_calendar" />
        </TableRow>
    </TableLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/term_course_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term_table">

        <TextView
            android:id="@+id/term_course_title_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/term_editor_course_sect_title"
            android:textSize="@dimen/sub_title_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/term_editor_add_course_fab"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/term_editor_add_course_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:clickable="true"
            app:fabSize="mini"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_add" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/term_course_list_recycle_viewer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/term_course_title_bar"
        tools:listitem="@layout/list_detail_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>
